--- a/frontend-test/src/index.css
+++ b/frontend-test/src/index.css
@@ -1,16 +1,44 @@
-.nav ul{
-  display: inline;
-  list-style:none;
-  text-align:center;
-  
-}
-#hej {
-  display:inline-flex;
-  
-  list-style: none;
-  color: blue;
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-#list{
-  padding:5px;
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+header nav li {
+  display: inline;
+  margin-right: 20px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.middle {}
+
+section {
+  margin: 20px;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
