--- a/frontend-test/src/index.css
+++ b/frontend-test/src/index.css
@@ -86,3 +86,30 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
+
+.card {
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+  max-width: 250px;
+  display: inline-block;
+}
+.card .image {
+  max-width: fit-content;
+  height: auto;
+  margin-bottom: 10px;
+}
+.card .title {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.2);
+}
+.card .text {
+  font-family: Arial, sans-serif;
+
+  color: rgba(0, 0, 0, 0.2);
+}
