--- a/src/components/Left/left.module.css
+++ b/src/components/Left/left.module.css
@@ -1,19 +1,22 @@
+
 .inputWrapper{
-    background-color: whitesmoke;
-    width: 80%;
-    border-radius: 10px;
+    background-color: aqua;
+    width: auto;
     height: 2.5rem;
     padding: 0 15px;
-    box-shadow: 0px 0px 8px #ddd;
+    box-shadow: 0px 0px 8p aqua;
     display: flex;
     align-items: center;
-
+    background-color: aqua;
 }
+
 input {
-background-color: transparent;
+background-color: white;
+border-radius: 10px;
 border:none;
-height: 50%;
+height: 70%;
 font-size: 1.25rem;
+text-align: center;
 
 }
 input:focus{
@@ -21,16 +24,57 @@ input:focus{
 }
 
 .resultList{
-    width: 80%;
-    background-color: whitesmoke;
+    
+    background-color: aqua;
     display:flex;
     flex-direction: column;
-    box-shadow: 0px 0px 8px #ddd;
+    box-shadow: 0px 0px 8px aqua;
     border-radius: 10px;
     max-height: 5rem;
     max-height: 300px;
     overflow-y: scroll;
 }
-.searchResults{
-    padding:10px 20px;
+
+
+
+
+.Sidebar{
+    height: 100%;
+    width: 400px;
+    background-color: aqua;
+  }
+.SidebarList{
+    height: auto;
+    padding:0 ;
+    
+
+
 }
+
+.row{
+    width: 100%;
+    height: 60px;
+    background-color: rgb(0, 255, 255);
+    list-style: none;
+    margin:0;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.row:hover{
+    cursor: pointer;
+    background-color: rgba(0,136,169,0.8);
+}
+.icon {
+    flex: 30%;
+    display:grid;
+    place-items: center;
+
+}
+.title{ 
+    flex: 30%;
+    
+}
+
