--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,15 @@
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-header nav li {
-  display: inline;
-  margin-right: 20px;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
 
 .content {
   display: flex;
   justify-content: center;
+ 
 }
 
 .left {
-  background-color: blueviolet;
+   
   flex-grow: 1;
   min-width: 100px;
+  
 
 }
 
@@ -43,13 +17,15 @@ nav a {
   background-color: blue;
   width: 680px;
   justify-content: center;
+  position: absolute;
 }
 
 .right {
   background-color: red;
   min-width: 100px;
+ 
   flex-grow: 1;
-  display: flex;
+  
 }
 
 @media (max-width: 880px) {
