--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -57,11 +57,11 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black background */
+  background-color: rgba(0, 0, 0, 0.5); 
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Ensure the overlay is on top of everything */
+  z-index: 9999; 
 }
 
 .popup {
@@ -71,7 +71,7 @@ button:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 300px;
   max-width: 90%;
-  z-index: 10000; /* Ensure the modal is on top of everything */
+  z-index: 10000; 
 }
 
   @media(max-width: 880px) {
